--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" type="text/css" href="css/FastCrash.css">
     <link rel="stylesheet" type="text/css" href="css/btnMenu.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
 
 
 </head>
@@ -24,14 +22,14 @@
     <header>
         <nav class="header">
             <a class="header__logo">
-                <img src="img/logo.png" alt="">               
+                <img src="img/logo.png" alt="">       
                 <h1>Crash<span>Burguer</span></h1>  
             </a>  
                       
             <a href="#menu" class="btnMenu btnMenu_open">Menu</a>
 
             <ul id="menu" class="header__nav"> 
-                <li class="btnMenu btnMenu_close">Sair</li> 
+                <li class="btnMenu btnMenu_close"><a href="index.html">Sair</a></li> 
                 <li class="menu-item"> 
                     <div class="header__nav--input-search">
                         <input type="text" id="buscar" placeholder="Pesquisar...">
@@ -90,7 +88,7 @@
             
             <div class="logozin">
                 <div class="anuncio">
-                    <li><img src="img/logo.bmp" alt=""></li>
+                    <li><img src="img/logo.png" alt=""></li>
                     <li><h1>Especiais<p>Da</p>Casa</h1></li>
                 </div>
 
